updated gitignore for c library

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,32 @@
 /target
 /Cargo.lock
+
+*.o
+*.dep
+*.lo
+*.libs/
+analyze_ckpt
+bb
+demo1
+demo2
+demo3
+demo4
+docgen
+dumpfst
+efst
+fst2graph
+geosteiner.h
+geosteiner_config
+geosteiner_config.install
+hgmst
+lib_points
+libgeosteiner.a
+libgeosteiner.la
+libLPS.a
+merge_ckpt
+plotfst
+prunefst
+rand_points
+rfst
+smt
+ufst
